--- a/config-maps.yaml
+++ b/config-maps.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: configMap-backend
+  namespace: my-namespace
 data:
   db-port: "87"
   api-port: "4242"
@@ -10,8 +11,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configMap-test
+  name: configMap-frontend
+  namespace: my-namespace
 data:
-  key1: value1
-  key2: value2
-  key3: value3
+  api-url: http://db-service:4242
