--- a/services.yaml
+++ b/services.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-service
+  namespace: my-namespace
 spec:
   type: ClusterIP
   selector:
@@ -16,6 +17,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: my-namespace
 spec:
   type: ClusterIP
   selector:
@@ -30,6 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: my-namespace
 spec:
   selector:
     app: myapp
